# nodui

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml
.github/: release.yml
.github/workflows/: ci.yml  pages.yml  prepare-release.yml
crates/nodui/: Cargo.toml
crates/nodui/src/: lib.rs  socket.rs  viewport.rs
crates/nodui/src/editor/: mod.rs  show_connection.rs  stages.rs
crates/nodui/src/editor/show_node/: header.rs  node.rs
crates/nodui/src/editor/show_node/render/: body.rs
crates/nodui/src/misc/: mod.rs
crates/nodui_core/: Cargo.toml  README.md
crates/nodui_core/src/: adapter.rs  lib.rs  size_hint.rs  visitor.rs
crates/nodui_core/src/adapter/: mod.rs  size_hint.rs  socket_data.rs  socket_field.rs  visitor.rs
crates/nodui_core/src/ui/: color.rs  mod.rs  node.rs  socket.rs  text.rs
crates/nodui_core/src/visitor/: mod.rs  socket_field.rs
crates/nodui_egui/: Cargo.toml  README.md
crates/nodui_egui/src/: connection.rs  context_menu.rs  conversion.rs  editor.rs  lib.rs  misc.rs  node.rs  socket.rs  viewport.rs
crates/nodui_egui/src/editor/: mod.rs  response.rs  show_connection.rs  show_viewport.rs  stages.rs  state.rs
crates/nodui_egui/src/editor/show_node/: header.rs  mod.rs  node.rs
crates/nodui_egui/src/editor/show_node/render/: body.rs  header.rs  socket.rs
crates/nodui_egui/src/editor2/: mod.rs  show_viewport.rs  socket.rs  stages.rs
crates/nodui_egui/src/editor2/show_connection/: mod.rs
crates/nodui_egui/src/editor2/show_node/: mod.rs  node.rs
crates/nodui_egui/src/editor2/show_node/render/: body.rs  header.rs  mod.rs  socket.rs
crates/nodui_egui/src/misc/: collect.rs  collector.rs  layout.rs  mod.rs
crates/nodui_egui/src/visitor/: body.rs  header.rs  mod.rs
demo/: Cargo.toml  index.html
demo/src/: lib.rs  main.rs
examples/playground/: Cargo.toml
examples/playground/src/: lib.rs  main.rs
examples/playground/src/app/: graph.rs  mod.rs  widget.rs
examples/playground/src/app/adapter/: mod.rs  node.rs
examples/playground/src/graph/: connections.rs  id.rs  mod.rs  node.rs  socket.rs
examples/playground/src/graph/node/: header.rs  mod.rs
examples/visual_math/: Cargo.toml
examples/visual_math/src/: lib.rs  main.rs
examples/visual_math/src/app/: graph.rs  mod.rs
examples/visual_math/src/app/graph/: adapter.rs  node.rs  socket.rs  visitor.rs
examples/visual_math/src/graph/: connections.rs  expr.rs  id.rs  input.rs  mod.rs  node.rs
nodui/: Cargo.toml
nodui/src/: lib.rs  node.rs  socket.rs
nodui/src/editor/: connections.rs  mod.rs  response.rs  show.rs  show_viewport.rs  stages.rs
nodui/src/editor/nodes/: mod.rs  node.rs
nodui/src/editor/nodes/render/: socket.rs
nodui/src/editor/show/: mod.rs  node.rs
nodui/src/editor/show/render/: body.rs  header.rs  mod.rs  socket.rs
nodui/src/editor/show_node/: mod.rs
nodui/src/misc/: collector.rs  layout.rs  mod.rs  viewport.rs
playground/: Cargo.toml
playground/src/: main.rs
playground/src/app/: adapter.rs  mod.rs  visitor.rs
playground/src/graph/: connections.rs  mod.rs
