[package]
name = "demo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
egui.workspace = true
eframe = { workspace = true, default-features = true, features = [
    "persistence",
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

playground = { version = "0.1.0", path = "../examples/playground" }
visual_math = { version = "0.1.0", path = "../examples/visual_math" }


[lints]
workspace = true


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

getrandom = { version = "*", features = ["js"] }
