[package]
name = "nodui"
description = "An egui-based visual graph editor"
readme = "../README.md"


rust-version.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[features]
serde = ["nodui_core/serde"]


[dependencies]
nodui_core.workspace = true
nodui_egui.workspace = true


[dev-dependencies]
eframe.workspace = true
egui.workspace = true
