[package]
name = "nodui"
description = "An egui-based visual graph editor"
readme = "../../README.md"


rust-version.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[features]
serde = ["dep:serde"]


[dependencies]
egui.workspace = true

serde = { version = "1", optional = true }


[dev-dependencies]
eframe.workspace = true
