[package]
name = "nodui_core"
description = "Core types for the nodui crate"
readme = "README.md"


rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[features]
serde = ["dep:serde"]


[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true
