[package]
name = "nodui_egui"
description = "egui implementation for the nodui crate"
readme = "README.md"


rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[lints]
workspace = true


[dependencies]
nodui_core.workspace = true

egui.workspace = true
