[package]
name = "visual_math"
version = "0.0.0"
edition = "2021"

publish = false

[dependencies]
nodui = { workspace = true, features = ["serde"] }

eframe = { workspace = true, default-features = true }
egui.workspace = true

uuid = { version = "1.17", features = ["v4", "serde", "js"] }
serde = { version = "1", features = ["derive"] }


[lints]
workspace = true
